// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be able to toggle check 1`] = `
<li
  className="capitalize list-item-checkable-link"
  disabled={false}
  onClick={[Function]}
  role="listitem"
  tabIndex={0}
>
  <Checkbox
    checked={true}
    onCheck={[Function]}
    thirdState={false}
  />
   
  professionals
</li>
`;

exports[`should be able to toggle check 2`] = `
Array [
  Array [
    "professionals",
    false,
  ],
]
`;

exports[`should be able to toggle check 3`] = `
<li
  className="capitalize list-item-checkable-link"
  disabled={false}
  onClick={[Function]}
  role="listitem"
  tabIndex={0}
>
  <Checkbox
    checked={false}
    onCheck={[Function]}
    thirdState={false}
  />
   
  professionals
</li>
`;

exports[`should disabled default groups 1`] = `
<li
  className="capitalize list-item-checkable-link"
  disabled={true}
  onClick={[Function]}
  role="listitem"
  tabIndex={0}
>
  <Checkbox
    checked={true}
    onCheck={[Function]}
    thirdState={false}
  />
   
  professionals
</li>
`;

exports[`should render unchecked 1`] = `
<li
  className="capitalize list-item-checkable-link"
  disabled={false}
  onClick={[Function]}
  role="listitem"
  tabIndex={0}
>
  <Checkbox
    checked={false}
    onCheck={[Function]}
    thirdState={false}
  />
   
  professionals
</li>
`;
